# debit-scrapers

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  compose.yaml  config.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  server.local.json  setup.cfg
.github/workflows/: ci.yaml  deploy-gcp.yaml
api/: .dockerignore  Dockerfile  deploy.sh  requirements.txt  schema.yml  setup.sh
api/apps/banks/: factories.py  models.py  serializers.py  tests.py  views.py
api/apps/common/: exceptions.py  functions.py  serializers.py  tests.py  views.py
api/apps/complaints/: models.py  serializers.py  views.py
api/apps/countries/: factories.py  models.py  serializers.py  tests.py  views.py
api/apps/form13f/: models.py  serializers.py  views.py
api/apps/pipeline/: factories.py  models.py  serializers.py  tests.py  views.py
api/apps/projects/: factories.py  models.py  serializers.py  tests.py  views.py
api/apps/sectors/: factories.py  models.py  serializers.py  tests.py  views.py
api/config/: settings.py  settings_dev.py  settings_local.py  settings_prod.py  urls.py
api/uwsgi/: uwsgi.ini
docs/: astro.config.mjs  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.mdx
docs/docs/extraction/: _category_.json  data-schema.md  overview.md
docs/src/css/: custom.css
infra/gcp/: README.md
infra/gcp/one-time/: setup-github-auth.sh
infra/gcp/persistent/: Pulumi.prod.yaml  Pulumi.test.yaml  Pulumi.yaml  __main__.py  constants.py  pyproject.toml
pipeline/: Dockerfile  constants.py  queue_workflows.py  requirements.txt  run_workflows.py  transform_data.py
pipeline/common/: database.py  logger.py  storage.py
pipeline/config/: asgi.py  countries.json  currency_codes.csv  form13f_companies.json  sectors.json  statuses.json  urls.py
pipeline/extract/: domain.py
pipeline/extract/workflows/: registry.py
pipeline/models/: task.py
pipeline/scrapers/: registry.py
pipeline/scrapers/abstract/: __init__.py  base_workflow.py  project_download_workflow.py  project_partial_scrape_workflow.py  project_scrape_workflow.py  results_multiscrape_workflow.py  results_scrape_workflow.py  seed_urls_workflow.py
pipeline/scrapers/banks/: __init__.py  adb.py  afdb.py  aiib.py  bio.py  deg.py  dfc.py  ebrd.py  eib.py  fmo.py  idb.py  ifc.py  kfw.py  miga.py  nbim.py  pro.py  undp.py  wb.py
pipeline/scrapers/forms/: __init__.py  (+1 more)
pipeline/services/: database.py  logger.py  pubsub.py  storage.py  web.py
pipeline/transform/: finance.py  jobs.py  names.py
pipeline_v2/: Dockerfile  manage.py  pyproject.toml  requirements.txt
pipeline_v2/common/: pubsub.py  web.py
pipeline_v2/config/: settings.py  wsgi.py
pipeline_v2/extract/: dal.py  domain.py  models.py
scrapers/: constants.py
scrapers/abstract/: base_workflow.py  project_download_workflow.py  project_partial_scrape_workflow.py  project_scrape_workflow.py  results_multiscrape_workflow.py  results_scrape_workflow.py  seed_urls_workflow.py
scrapers/banks/: adb.py  afdb.py  aiib.py  bio.py  deg.py  dfc.py  ebrd.py  eib.py  fmo.py  idb.py  ifc.py  kfw.py  miga.py  nbim.py  pro.py  undp.py  wb.py
scrapers/config/: credentials.dev.json
scrapers/entrypoints/: queue_workflows.py  run_workflows.py
scrapers/models/: task.py
scrapers/services/: data_request.py  database.py  logger.py  pubsub.py  registry.py
services/extract/: .dockerignore  Dockerfile.heavy  Dockerfile.light  Makefile  README.md  compose.yaml  pyproject.toml  server.local.json
services/extract/src/pipeline/: __init__.py  manage.py  run_tests.sh  setup.sh
services/extract/src/pipeline/common/: __init__.py  database.py  http.py  logger.py  tasks.py
services/extract/src/pipeline/config/: asgi.py  gunicorn.py  middleware.py  settings.py  urls.py  wsgi.py
services/extract/src/pipeline/extract/: domain.py  models.py  sql.py  tasks.py  views.py
services/extract/src/pipeline/extract/config/: iati_activity_country_codes.json  iati_activity_sector_codes.json  iati_activity_status_codes.json
services/extract/src/pipeline/extract/management/: __init__.py
services/extract/src/pipeline/extract/management/commands/: orchestrate.py  truncate.py
services/extract/src/pipeline/extract/migrations/: 0001_initial.py  0003_extractedproject_fiscal_year_effective.py  __init__.py
services/extract/src/pipeline/extract/tests/integration/: __init__.py  banks.py  common.py
services/extract/src/pipeline/extract/tests/params/: project_pages.yaml  project_pages_partial.yaml  result_pages_multi.yaml
services/extract/src/pipeline/extract/workflows/: __init__.py  registry.py
services/extract/src/pipeline/extract/workflows/abstract/: base_workflow.py  project_download_workflow.py  project_partial_download_workflow.py  project_partial_scrape_workflow.py  project_scrape_workflow.py  results_multiscrape_workflow.py  results_scrape_workflow.py  seed_urls_workflow.py
services/extract/src/pipeline/extract/workflows/banks/: __init__.py  adb.py  afdb.py  aiib.py  bio.py  deg.py  dfc.py  ebrd.py  eib.py  fmo.py  idb.py  ifc.py  kfw.py  miga.py  nbim.py  pro.py  undp.py  wb.py
services/map/: Dockerfile  Makefile  README.md  pyproject.toml
services/map/src/map_clean/: __init__.py  constants.py  main.py
services/map/src/map_clean/utils/: __init__.py  storage.py
services/transform/: Dockerfile  Makefile  README.md  pyproject.toml
services/transform/src/clean_raw/: __init__.py  constants.py  currency.py  main.py  standardize.py
services/transform/src/clean_raw/config/: country_map.json  currency_country_map.json  currency_map.json  sector_map.json  status_map.json
services/transform/src/clean_raw/utils/: __init__.py
src/: .dockerignore  Dockerfile.heavy  Dockerfile.light  pyproject.toml  run_tests.sh  setup.sh
src/pipeline/: __init__.py
test/integration/: test_breaking_scrapes.py  test_fast_scrapes.py  test_slow_scrapes.py
test/itests/: test_bank_scrapes.py
tests/: unit.py
tests/integration/: test_breaking_scrapes.py  test_fast_scrapes.py  test_slow_scrapes.py
(+184 files in other folders)
