[project]
name = "debit-scrapers"
version = "0.0.1"
authors = [
    {name = "DSI Core Facility", email = "DSICoreFacility@uchicago.edu"}
]
maintainers = [
    {name = "DSI Core Facility", email = "DSICoreFacility@uchicago.edu"}
]
description = "Framework for extracting project data from international development institutions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2.5",
    "flask>=3.1.2",
    "google-api-core>=2.25.1",
    "google-auth>=2.40.3",
    "google-cloud>=0.34.0",
    "google-cloud-core>=2.4.3",
    "google-genai>=1.31.0",
    "lxml[html-clean]>=6.0.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "requests-html>=0.10.0",
    "stream-unzip>=0.0.99",
    "xlrd>=2.0.2",
    "google-cloud-tasks>=2.19.3",
    "playwright>=1.54.0",
    "gunicorn>=23.0.0",
    "smart-open>=7.3.1",
    "cloudevents>=1.12.0",
    "curl-cffi>=0.13.0",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.54.0",
]

[tool.ruff.lint]
extend-select = [
  # by default, ruff enables all F and a subset of E rules
  # for a description of rulesets and examples, see:
  # https://docs.astral.sh/ruff/rules/
  "ANN",    # flake8-annotations - type annotations, some ignored
  "B",      # bugbear - identifies likely bugs
  "C4",     # flake8-comprehensions - identifies redundant calls in comprehensions
  "D",      # pydocstyle - requires docstrings on all public modules/functions/classes
  "I",      # isort
  "N801",   # pep8-naming - enforce ClassNamesStyle
  "N804",   # pep8-naming - first arg of classmethod should be cls
  "N805",   # pep8-naming - first arg of method should be self
  "PD",     # pandas-vet
  "PLR2004",# Pylint no magic values!
  "PTH",    # prefer pathlib over os.path as seems to be the consensus
  "Q",      # flake8-quotes - double quotes preferred (like black)
  "S",      # flake8-bandit - security checks
  "UP",     # pyupgrade - requires preferred syntax in newer python versions
  "YTT",    # flake8-2020 - corrects code that doesn't anticipate 2 digit python minor version  
]

ignore = [
  "D415",   # allow first line of doctstrings to end without punctuation
  "ANN001", # missing type on self
  "ANN002", # missing type on *args
  "ANN003", # missing type on **kwargs
  "B905",   # won't work on python <3.10
  "I001",   # isort found unsorted imports
  "PD901",  # Avoid using the generic variable name `df` for DataFrames
  "PTH123", # prefer pathlib over os.path
  "S311"    # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.uv]
dev-dependencies = [
  "pytest>=8.4.1",
  "pytest-django>=4.11.1",
  "ruff>=0.12.10",
  "pre-commit>=4.3.0",
]
