[project]
name = "debit-map"
version = "0.1.0"
authors = [
    {name = "DSI Core Facility", email = "DSICoreFacility@uchicago.edu"}
]
maintainers = [
    {name = "DSI Core Facility", email = "DSICoreFacility@uchicago.edu"}
]
description = "Maps clean project data to the format required for the DeBIT website."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.64",
    "botocore>=1.40.64",
    "fastparquet>=2024.11.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "smart-open[gcs,s3]>=7.4.0",
]

[tool.ruff.lint]
extend-select = [
  # by default, ruff enables all F and a subset of E rules
  # for a description of rulesets and examples, see:
  # https://docs.astral.sh/ruff/rules/
  "ANN",    # flake8-annotations - type annotations, some ignored
  "B",      # bugbear - identifies likely bugs
  "C4",     # flake8-comprehensions - identifies redundant calls in comprehensions
  "D",      # pydocstyle - requires docstrings on all public modules/functions/classes
  "I",      # isort
  "N801",   # pep8-naming - enforce ClassNamesStyle
  "N804",   # pep8-naming - first arg of classmethod should be cls
  "N805",   # pep8-naming - first arg of method should be self
  "PD",     # pandas-vet
  "PLR2004",# Pylint no magic values!
  "PTH",    # prefer pathlib over os.path as seems to be the consensus
  "Q",      # flake8-quotes - double quotes preferred (like black)
  "S",      # flake8-bandit - security checks
  "UP",     # pyupgrade - requires preferred syntax in newer python versions
  "YTT",    # flake8-2020 - corrects code that doesn't anticipate 2 digit python minor version  
]

ignore = [
  "D415",   # allow first line of doctstrings to end without punctuation
  "ANN001", # missing type on self
  "ANN002", # missing type on *args
  "ANN003", # missing type on **kwargs
  "B905",   # won't work on python <3.10
  "I001",   # isort found unsorted imports
  "PD901",  # Avoid using the generic variable name `df` for DataFrames
  "PTH123", # prefer pathlib over os.path
  "S311"    # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.lint.pydocstyle]
convention = "google"
